--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,6 @@ fabric_loader_version=0.14.10
 fabric_api_version=0.64.0+1.19.2
 
 forge_version=1.19.2-43.1.47
-
 ftb_library_version=1902.3.10-build.151
 
-
+curseforge_id=693963
