--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,10 @@ allprojects {
     apply plugin: "architectury-plugin"
     apply plugin: "maven-publish"
 
+    def ENV = System.getenv()
+
     archivesBaseName = rootProject.archives_base_name
-    version = rootProject.mod_version
+    version = "${mod_version}-build.${ENV.GITHUB_RUN_NUMBER ?: 9999}+mc${minecraft_version}"
     group = rootProject.maven_group
 
     repositories {
