--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     modApi "dev.architectury:architectury:${rootProject.architectury_version}"
 
-    modApi ("dev.ftb.mods:ftb-library:${rootProject.ftb_library_version}") { transitive false }
+    modImplementation ("dev.ftb.mods:ftb-library:${rootProject.ftb_library_version}") { transitive false }
 }
 
 def ENV = System.getenv()
