--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Java CI - Build on Push
 
 on:
   push:
-    branches: [ main, "1.*" ]
+    branches: [ main, dev, "1.*" ]
   workflow_dispatch:
     inputs:
       skip_maven_publish:
@@ -12,33 +12,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     if: |
       !contains(github.event.head_commit.message, '[ciskip]')
-    steps:
-      - name: Export release tag as environment variable
-        env:
-          TAG: ${{ github.event.release.tag_name }}
-        run: |
-          echo "TAG=${TAG}" >> $GITHUB_ENV
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 30 # Gets the last 30 commits so the changelog might work
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
-      - name: Publish to Maven
-        uses: gradle/gradle-build-action@v2
-        if: github.event.inputs.skip_maven_publish != 'true'
-        env:
-          FTB_MAVEN_TOKEN: ${{ secrets.FTB_MAVEN_TOKEN}}
-          SAPS_TOKEN: ${{ secrets.SAPS_TOKEN }}
-          SNAPSHOT: true
-        with:
-          arguments: publish
+    uses: FTBTeam/mods-meta/.github/workflows/standard-release.yml@main
+    with:
+      curse-publish-task: ""
+      maven-snapshots: true
+    secrets:
+      ftb-maven-token: ${{ secrets.FTB_MAVEN_TOKEN }}
+      saps-token: ${{ secrets.SAPS_TOKEN }}
