--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,11 @@ allprojects {
     def ENV = System.getenv()
 
     archivesBaseName = rootProject.archives_base_name
-    version = "${mod_version}-build.${ENV.GITHUB_RUN_NUMBER ?: 9999}+mc${minecraft_version}"
+    version = "${mod_version}+mc${minecraft_version}"
     group = rootProject.maven_group
+
+    // needs to be done AFTER version is set
+    apply from: "https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/publishing.gradle"
 
     repositories {
         maven {
