--- a/common/build.gradle
+++ b/common/build.gradle
@@ -16,47 +16,32 @@ dependencies {
     modApi ("dev.ftb.mods:ftb-library:${rootProject.ftb_library_version}") { transitive false }
 }
 
-def ENV = System.getenv()
-
-
-def ftbURL = "https://maven.ftb.dev/releases"
-def sapsURL = "https://maven.saps.dev/releases"
-def mavenVersion = rootProject.version
-if (ENV.SNAPSHOT != null && ENV.SNAPSHOT == "true") {
-    ftbURL = "https://maven.ftb.dev/releases"
-    mavenVersion += "-SNAPSHOT"
-}
-
 publishing {
     publications {
-        mavenJava(MavenPublication) {
-            groupId = rootProject.maven_group
-            artifactId = project.archivesBaseName
-            version = mavenVersion
-
-            artifact(remapJar) {
-                builtBy remapJar
-            }
+        mavenForge(MavenPublication) {
+            artifactId = "${rootProject.archives_base_name}"
+            version ftbPublishing.mavenVersion
+            from components.java
         }
     }
 
     repositories {
-        if (ENV.FTB_MAVEN_TOKEN) {
+        if (ftbPublishing.ftbToken) {
             maven {
-                url ftbURL
+                url ftbPublishing.ftbURL
                 credentials {
-                    username = "ftb"
-                    password = "${ENV.FTB_MAVEN_TOKEN}"
+                    username = ftbPublishing.ftbUser
+                    password = ftbPublishing.ftbToken
                 }
             }
         }
 
-        if (ENV.SAPS_TOKEN) {
+        if (ftbPublishing.sapsToken) {
             maven {
-                url sapsURL
+                url ftbPublishing.sapsURL
                 credentials {
-                    username = "ftb"
-                    password = "${ENV.SAPS_TOKEN}"
+                    username = ftbPublishing.sapsUser
+                    password = ftbPublishing.sapsToken
                 }
             }
         }
