--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,33 @@ architectury {
     minecraft = rootProject.minecraft_version
 }
 
+allprojects {
+    apply plugin: "java"
+    apply plugin: "architectury-plugin"
+    apply plugin: "maven-publish"
+
+    def ENV = System.getenv()
+
+    archivesBaseName = rootProject.archives_base_name
+    version = "${mod_version}+mc${minecraft_version}"
+    group = rootProject.maven_group
+
+    repositories {
+        maven {
+            url "https://maven.ftb.dev/releases"
+        }
+    }
+
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+        options.release = 17
+    }
+
+    java {
+        withSourcesJar()
+    }
+}
+
 subprojects {
     apply plugin: "dev.architectury.loom"
     apply plugin: 'maven-publish'
@@ -46,32 +73,5 @@ subprojects {
                 }
             }
         }
-    }
-}
-
-allprojects {
-    apply plugin: "java"
-    apply plugin: "architectury-plugin"
-    apply plugin: "maven-publish"
-
-    def ENV = System.getenv()
-
-    archivesBaseName = rootProject.archives_base_name
-    version = "${mod_version}-build.${ENV.GITHUB_RUN_NUMBER ?: 9999}+mc${minecraft_version}"
-    group = rootProject.maven_group
-
-    repositories {
-        maven {
-            url "https://maven.ftb.dev/releases"
-        }
-    }
-
-    tasks.withType(JavaCompile) {
-        options.encoding = "UTF-8"
-        options.release = 17
-    }
-
-    java {
-        withSourcesJar()
     }
 }
