--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -93,28 +93,19 @@ publishing {
     }
 }
 
-
-def relType = "release"
-if (ENV.TAG != null) {
-    if (ENV.TAG.contains("alpha")) {
-        relType = "alpha"
-    } else if (ENV.TAG.contains("beta")) {
-        relType = "beta"
-    }
-}
 if (ENV.CURSEFORGE_KEY) {
     curseforge {
         apiKey = ENV.CURSEFORGE_KEY
         project {
             id = rootProject.curseforge_id
-            releaseType = relType
+            releaseType = ftbPublishing.relType
             addGameVersion "Forge"
             addGameVersion rootProject.minecraft_version
             mainArtifact(remapJar.archiveFile)
             relations {
                 requiredDependency 'ftb-library-forge'
             }
-            changelog = file("./../CHANGELOG.md")
+            changelog = ENV.CHANGELOG  // expected to exist if ENV.CURSEFORGE_KEY does
             changelogType = 'markdown'
         }
     }
