--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -12,6 +12,19 @@ architectury {
 
 loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
+
+    runs {
+        datagen {
+            inherit server
+            name "Data Generation"
+
+            vmArg "-Dfabric-api.datagen"
+            vmArg "-Dfabric-api.datagen.output-dir=${project(":common").file("src/main/generated/resources")}"
+            vmArg "-Dfabric-api.datagen.modid=ftbpc"
+
+            runDir "build/datagen"
+        }
+    }
 }
 
 configurations {
