--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ minecraft_version=1.19.2
 enabled_platforms=fabric,forge
 
 archives_base_name=ftb-pack-companion
-mod_version=2.0.7
+mod_version=2.1.0
 maven_group=dev.ftb.mods
 
-architectury_version=6.3.49
+architectury_version=6.4.62
 
 fabric_loader_version=0.14.10
 fabric_api_version=0.64.0+1.19.2
@@ -16,3 +16,8 @@ forge_version=1.19.2-43.2.6
 ftb_library_version=1902.4.1-build.236
 
 curseforge_id=693963
+
+# Mod deps
+tips_version=8.0.27
+bs_version=16.3.20
+mt_version=6.2.3
