--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -42,6 +42,13 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+
+    maven {
+        url "https://maven.terraformersmc.com/releases/"
+        content {
+            includeGroup "com.terraformersmc"
+        }
+    }
 }
 
 dependencies {
@@ -54,6 +61,9 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
+
+    // Include modmenu
+    modImplementation("com.terraformersmc:modmenu:${modmenu_version}")
 
     modRuntimeOnly "curse.maven:jade-324717:4328558"
 }
