--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ minecraft_version=1.19.2
 enabled_platforms=fabric,forge
 
 archives_base_name=ftb-pack-companion
-mod_version=2.2.0
+mod_version=2.2.1-alpha
 maven_group=dev.ftb.mods
 
 architectury_version=6.4.62
 
-fabric_loader_version=0.14.10
-fabric_api_version=0.64.0+1.19.2
+fabric_loader_version=0.14.14
+fabric_api_version=0.75.1+1.19.2
 
 forge_version=1.19.2-43.2.6
 ftb_library_version=1902.4.1-build.236
@@ -21,3 +21,5 @@ curseforge_id=693963
 tips_version=8.0.27
 bs_version=16.3.20
 mt_version=6.2.3
+
+jei_version=11.6.0.1019
