--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ minecraft_version=1.19.2
 enabled_platforms=fabric,forge
 
 archives_base_name=ftb-pack-companion
-mod_version=2.2.1-alpha
+mod_version=2.2.1-alpha.2
 maven_group=dev.ftb.mods
 
 architectury_version=6.4.62
