--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,26 @@
 org.gradle.jvmargs=-Xmx4G
 
-minecraft_version=1.19.2
+minecraft_version=1.20.1
 enabled_platforms=fabric,forge
 
 archives_base_name=ftb-pack-companion
-mod_version=2.2.1
+# neo style version number
+mod_version=20.1.0
 maven_group=dev.ftb.mods
 
-architectury_version=6.4.62
+architectury_version=9.2.14
 
-fabric_loader_version=0.14.14
-fabric_api_version=0.75.1+1.19.2
+fabric_loader_version=0.15.7
+fabric_api_version=0.92.0+1.20.1
 
-forge_version=1.19.2-43.2.6
-ftb_library_version=1902.4.1-build.236
+forge_version=1.20.1-47.2.0
+ftb_library_version=2001.1.5
 
 curseforge_id=693963
 
 # Mod deps
-tips_version=8.0.27
-bs_version=16.3.20
+tips_version=12.0.5
+bs_version=20.1.9
 mt_version=6.2.3
 
-jei_version=11.6.0.1019
+jei_version=15.3.0.4
