--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -51,25 +51,23 @@ dependencies {
     modImplementation("dev.ftb.mods:ftb-library-forge:${rootProject.ftb_library_version}") { transitive false }
 
     modCompileOnly("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
-
-    modRuntimeOnly("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
-    modRuntimeOnly("com.jozufozu.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
+    modRuntimeOnly("com.simibubi.create:create-${minecraft_version}:${create_version}") { transitive = false }
     modRuntimeOnly("com.tterrag.registrate:Registrate:${registrate_version}")
 
-    modRuntimeOnly("curse.maven:creeperhost-minetogether-267172:5075807")
-    modRuntimeOnly("curse.maven:poly-576589:4895988")
+    modRuntimeOnly("curse.maven:creeperhost-minetogether-267172:5075809")
+    modRuntimeOnly("curse.maven:poly-576589:5199137")
 
     modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
     modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
     modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-core:${jei_version}") // Required for JER
 //    modRuntimeOnly("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
 
-    modRuntimeOnly("curse.maven:jei-238222:5106178")
+    modRuntimeOnly("curse.maven:jei-238222:5101366")
 
 //    modRuntimeOnly("net.darkhax.tips:Tips-Forge-${minecraft_version}:${tips_version}")
 //    modRuntimeOnly("net.darkhax.bookshelf:Bookshelf-Forge-${minecraft_version}:${bs_version}")
 
-    modImplementation("curse.maven:jer-240630:4862430")
+    modImplementation("curse.maven:jer-240630:5057220")
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
@@ -88,17 +86,17 @@ shadowJar {
     exclude "architectury.common.json"
 
     configurations = [project.configurations.shadowCommon]
-    classifier "dev-shadow"
+    setArchiveClassifier "dev-shadow"
 }
 
 remapJar {
     input.set shadowJar.archiveFile
     dependsOn shadowJar
-    classifier null
+    setArchiveClassifier null
 }
 
 jar {
-    classifier "dev"
+    setArchiveClassifier "dev"
 }
 
 sourcesJar {
