--- a/forge/gradle.properties
+++ b/forge/gradle.properties
@@ -1,5 +1,4 @@
 loom.platform=forge
 
-create_version=0.5.1.e-44
-flywheel_version=0.6.10-20
-registrate_version=MC1.19-1.1.5
+create_version=0.5.1.f-26
+registrate_version=MC1.20-1.3.0
