--- a/common/build.gradle
+++ b/common/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     modCompileOnly("net.darkhax.tips:Tips-Forge-${minecraft_version}:${tips_version}")
 
     modCompileOnly("curse.maven:creeperhost-minetogether-267172:5075809")
-    modCompileOnly("curse.maven:poly-576589:5199137")
+    modCompileOnly "net.creeperhost:polylib-fabric:2000.0.3-build.133"
 
     modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
     modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-gui:${jei_version}")
