--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,27 @@
 org.gradle.jvmargs=-Xmx4G
 
-minecraft_version=1.20.1
-enabled_platforms=fabric,forge
+minecraft_version=1.20.4
+enabled_platforms=fabric,neoforge
 
 archives_base_name=ftb-pack-companion
+readable_name=FTB Pack Companion
 # neo style version number
-mod_version=20.1.1
+mod_version=20.4.0
 maven_group=dev.ftb.mods
 
-architectury_version=9.2.14
+architectury_version=11.1.17
 
-fabric_loader_version=0.15.7
-fabric_api_version=0.92.0+1.20.1
+fabric_loader_version=0.15.11
+fabric_api_version=0.97.0+1.20.4
 
-forge_version=1.20.1-47.2.0
-ftb_library_version=2001.1.5
+neoforge_version=20.4.234
+ftb_library_version=2004.2.2
 
 curseforge_id=693963
 
 # Mod deps
-tips_version=12.0.5
-bs_version=20.1.9
-mt_version=6.2.3
+tips_version=15.0.4
+bs_version=23.0.8
+mt_version=6.2.5
 
-jei_version=15.3.0.4
+jei_version=17.3.0.52
