feat: port to 1.21.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,27 +1,34 @@
 org.gradle.jvmargs=-Xmx4G
 
-minecraft_version=1.20.4
 enabled_platforms=fabric,neoforge
 
 archives_base_name=ftb-pack-companion
 readable_name=FTB Pack Companion
 # neo style version number
-mod_version=20.4.2
+mod_version=21.1.0-beta.1
 maven_group=dev.ftb.mods
 
-architectury_version=11.1.17
+minecraft_version=1.21.1
+next_minecraft_version=1.21.2
+architectury_api_version=13.0.6
 
-fabric_loader_version=0.15.11
-fabric_api_version=0.97.0+1.20.4
+fabric_loader_version=0.16.5
+fabric_api_version=0.104.0+1.21.1
 
-neoforge_version=20.4.234
-ftb_library_version=2004.2.2
+neoforge_version=21.1.51
+neoforge_loader_version=4
+
+ftb_library_version=2101.1.2
 
 curseforge_id=693963
 
 # Mod deps
-tips_version=15.0.4
-bs_version=23.0.8
-mt_version=6.2.5
+#tips_version=15.0.4
+#bs_version=23.0.8
+#mt_version=6.2.5
+modmenu_version=11.0.2
+#create_version=0.5.1.f-26
+#registrate_version=MC1.20-1.3.0
 
-jei_version=17.3.0.52
+jei_enabled=common,neoforge
+jei_version=19.18.3.204
