--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
+    id "dev.architectury.loom" version "1.7-SNAPSHOT" apply false
     id "me.modmuss50.mod-publish-plugin" version "0.5.1"
 }
 
@@ -34,7 +34,7 @@ allprojects {
 
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
-        options.release = 17
+        options.release = 21
     }
 
     java {
@@ -45,6 +45,8 @@ allprojects {
 subprojects {
     apply plugin: "dev.architectury.loom"
     apply plugin: 'maven-publish'
+
+    apply from: rootProject.file("extra-build.gradle")
     apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/publishing.gradle'
 
     loom {
@@ -126,9 +128,9 @@ publishMods {
     curseforge("curseforgeFabric") {
         from(curseForgeOptions, createOptions("fabric"))
         projectId = curseforge_id
-        requires {slug = "fabric-api" }
-        requires {slug = "architectury-api" }
-        requires {slug = 'ftb-library-fabric' }
+        requires { slug = "fabric-api" }
+        requires { slug = "architectury-api" }
+        requires { slug = 'ftb-library-fabric' }
     }
 
     curseforge("curseforgeNeoForge") {
