--- a/common/build.gradle
+++ b/common/build.gradle
@@ -19,19 +19,17 @@ dependencies {
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     // Remove the next line if you don't want to depend on the API
-    modApi "dev.architectury:architectury:${rootProject.architectury_version}"
+    modApi "dev.architectury:architectury:${rootProject.architectury_api_version}"
 
     modImplementation ("dev.ftb.mods:ftb-library:${rootProject.ftb_library_version}") { transitive false }
-    modCompileOnly("net.darkhax.tips:Tips-Forge-${minecraft_version}:${tips_version}")
+//    modCompileOnly("net.darkhax.tips:Tips-Forge-${minecraft_version}:${tips_version}")
 
-    modCompileOnly("curse.maven:creeperhost-minetogether-267172:5300688")
-    modCompileOnly "net.creeperhost:polylib-fabric:2004.0.3-build.140"
-
-    modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
-    modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-gui:${jei_version}")
+    if (isEnabled(jei_enabled)) {
+        modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
+        modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-gui:${jei_version}")
+    }
 }
 
-def ENV = System.getenv()
 
 publishing {
     publications {
