--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -2,8 +2,6 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
-def ENV = System.getenv()
-
 architectury {
     platformSetupLoomIde()
     fabric()
@@ -53,36 +51,25 @@ repositories {
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
-    // Remove the next line if you don't want to depend on the API
-    modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
+
+    modApi "dev.architectury:architectury-fabric:${rootProject.architectury_api_version}"
 
     modImplementation ("dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}") { transitive false }
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
 
-    modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
-    modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-fabric-api:${jei_version}") {
-        transitive = false
+    if (isEnabled(jei_enabled)) {
+        modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
+        modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-fabric-api:${jei_version}") {
+            transitive = false
+        }
+
+        modRuntimeOnly("mezz.jei:jei-${minecraft_version}-fabric:${jei_version}")
     }
-//    modRuntimeOnly("mezz.jei:jei-${minecraft_version}-fabric:${jei_version}")
-//
+
     // Include modmenu
     modImplementation("com.terraformersmc:modmenu:${modmenu_version}") {
-        transitive = false
-    }
-
-    modRuntimeOnly "curse.maven:jade-324717:5072729"
-
-    // Testing mods
-    modRuntimeOnly("curse.maven:cloth-config-348521:4973441") {
-        transitive = false
-    }
-
-    modRuntimeOnly("curse.maven:ae2-223794:5169355") {
-        transitive = false
-    }
-    modRuntimeOnly('teamreborn:energy:2.2.0') {
         transitive = false
     }
 }
