--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -2,8 +2,6 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
-def ENV = System.getenv()
-
 architectury {
     platformSetupLoomIde()
     neoForge()
@@ -48,37 +46,42 @@ repositories {
 
 dependencies {
     neoForge "net.neoforged:neoforge:${rootProject.neoforge_version}"
-    // Remove the next line if you don't want to depend on the API
-    modApi "dev.architectury:architectury-neoforge:${rootProject.architectury_version}"
+    modApi "dev.architectury:architectury-neoforge:${rootProject.architectury_api_version}"
 
     modImplementation("dev.ftb.mods:ftb-library-neoforge:${rootProject.ftb_library_version}") { transitive false }
 
+    if (isEnabled(jei_enabled)) {
+        modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
+        modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
+        modRuntimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")
+    }
+
+// Waiting for ports
+//    modRuntimeOnly("net.darkhax.tips:Tips-Forge-${minecraft_version}:${tips_version}")
+//    modRuntimeOnly("net.darkhax.bookshelf:Bookshelf-Forge-${minecraft_version}:${bs_version}")
 //    modCompileOnly("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
 //    modRuntimeOnly("com.simibubi.create:create-${minecraft_version}:${create_version}") { transitive = false }
 //    modRuntimeOnly("com.tterrag.registrate:Registrate:${registrate_version}")
-
-    modRuntimeOnly("curse.maven:creeperhost-minetogether-267172:5300690")
-    modRuntimeOnly("curse.maven:poly-576589:5308723")
-
-    modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
-    modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
-    modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-core:${jei_version}") // Required for JER
-    modRuntimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")
-
-//    modRuntimeOnly("net.darkhax.tips:Tips-Forge-${minecraft_version}:${tips_version}")
-//    modRuntimeOnly("net.darkhax.bookshelf:Bookshelf-Forge-${minecraft_version}:${bs_version}")
-
-    modImplementation("curse.maven:jer-240630:5228273")
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionNeoForge")) { transitive = false }
 }
 
 processResources {
-    inputs.property "version", project.version
+    def props = [
+        "version": project.version,
+        "archversion": project.architectury_api_version,
+        "neoforge_version": project.neoforge_version,
+        "neoforge_loader_version": project.neoforge_loader_version,
+        "minecraft_version": project.minecraft_version,
+        "next_minecraft_version": project.next_minecraft_version,
+        "ftblibraryversion": project.ftb_library_version
+    ]
 
-    filesMatching("META-INF/mods.toml") {
-        expand "version": project.version
+    inputs.properties props
+
+    filesMatching("META-INF/neoforge.mods.toml") {
+        expand props
     }
 }
 
