--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[2,)"
+loaderVersion = "[${neoforge_loader_version},)"
 #issueTrackerURL = ""
 license = "ARR"
 
@@ -16,21 +16,28 @@ A Modpack developers best friend
 [[dependencies.ftbpc]]
 modId = "neoforge"
 required = true
-versionRange = "[20.4,)"
+versionRange = "[${neoforge_version},)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.ftbpc]]
 modId = "minecraft"
 required = true
-versionRange = "[1.20.4,1.20.5)"
+versionRange = "[${minecraft_version},${next_minecraft_version})"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.ftbpc]]
 modId = "architectury"
 required = true
-versionRange = "[11.1.17,)"
+versionRange = "[${archversion},)"
+ordering = "AFTER"
+side = "BOTH"
+
+[[dependencies.ftbpc]]
+modId = "ftblibrary"
+required = true
+versionRange = "[${ftblibraryversion},)"
 ordering = "AFTER"
 side = "BOTH"
 
