--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ enabled_platforms=fabric,neoforge
 archives_base_name=ftb-pack-companion
 readable_name=FTB Pack Companion
 # neo style version number
-mod_version=21.1.0-beta.1
+mod_version=21.1.1
 maven_group=dev.ftb.mods
 
 minecraft_version=1.21.1
