--- a/gradle.properties
+++ b/gradle.properties
@@ -1,34 +1,33 @@
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
 
-enabled_platforms=fabric,neoforge
+parchment_minecraft_version=${mc_version}
+parchment_mappings_version=2024.11.17
 
-archives_base_name=ftb-pack-companion
-readable_name=FTB Pack Companion
-# neo style version number
-mod_version=21.1.3
-maven_group=dev.ftb.mods
+mod_name=FTB Pack Companion
+mod_id=ftbpc
+mod_version=4
 
 minecraft_version=1.21.1
-next_minecraft_version=1.21.2
-architectury_api_version=13.0.6
+# https://minecraft.fandom.com/wiki/Pack_format
+pack_format=34
 
-fabric_loader_version=0.16.5
-fabric_api_version=0.104.0+1.21.1
+loader_version_range=[4,)
+mod_loader_range=[${mc_base},)
+neo_version=136
 
-neoforge_version=21.1.51
-neoforge_loader_version=4
+#Mod Stuff
+archives_base_name=ftb-pack-companion
+maven_group=dev.ftb.mods
 
-ftb_library_version=2101.1.2
-
+#CurseForge
 curseforge_id=693963
 
-# Mod deps
-#tips_version=15.0.4
-#bs_version=23.0.8
-#mt_version=6.2.5
-modmenu_version=11.0.2
-#create_version=0.5.1.f-26
-#registrate_version=MC1.20-1.3.0
+#Deps
+ftb_library_version=2101.1.12
 
 jei_enabled=common,neoforge
 jei_version=19.18.3.204
