fix: use snapshot version

--- a/build.gradle
+++ b/build.gradle
@@ -202,6 +202,8 @@ publishMods {
 publishing {
     publications {
         register('mavenJava', MavenPublication) {
+            version = ftbPublishing.mavenVersion
+
             from components.java
             artifact sourcesJar
             // Uncomment this if you want to create an API jar
