--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,13 @@ repositories {
     }
 
     maven {
+        url = "https://maven.ftb.dev/snapshots"
+        content {
+            includeGroup("dev.ftb.mods")
+        }
+    }
+
+    maven {
         url = "https://cursemaven.com"
         content {
             includeGroup("curse.maven")
@@ -132,6 +139,9 @@ dependencies {
 
     implementation "curse.maven:irisshaders-455508:6661598"
     implementation "curse.maven:embeddium-908741:6118392"
+
+    compileOnly "dev.ftb.mods:ftb-chunks-neoforge:${ftb_chunks_version}"
+    localRuntime "dev.ftb.mods:ftb-chunks-neoforge:${ftb_chunks_version}"
 
     compileOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}:api"
     runtimeOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}"
