--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ curseforge_id=693963
 
 #Deps
 ftb_library_version=2101.1.24
-ftb_chunks_version=2101.1.13-SNAPSHOT
+ftb_chunks_version=2101.1.13
 
 jei_enabled=common,neoforge
 jei_version=19.18.3.204
