fix: addresses FTBTeam/FTB-Modpack-Issues#9378
chore: awaiting library release to push

--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,13 @@ repositories {
     }
 
     maven {
+        url = "https://maven.ftb.dev/snapshots"
+        content {
+            includeGroup("dev.ftb.mods")
+        }
+    }
+
+    maven {
         url = "https://cursemaven.com"
         content {
             includeGroup("curse.maven")
